--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             return { x, y };
         }
 
-        function solveGraphicalMethod() {
+function solveGraphicalMethod() {
     const inputs = document.querySelectorAll('#objective-function input');
     const x1 = parseFloat(inputs[0].value);
     const x2 = parseFloat(inputs[1].value);
@@ -96,19 +96,25 @@
             L = ${x1} * ${bestPoint.x.toFixed(2)} + ${x2} * ${bestPoint.y.toFixed(2)} = ${bestValue.toFixed(2)}`;
 
         drawGraph(constraints, bestPoint);
+
+        // 💡 Сохраняем с задержкой, чтобы график успел отрисоваться
+        setTimeout(() => {
+            const canvas = document.getElementById("graphCanvas");
+            const graphImage = canvas.toDataURL("image/png");
+
+            saveSolution({
+                method: "Графический метод",
+                objective: `Z = ${x1}x1 + ${x2}x2`,
+                constraints: constraints.map(c => `${c.a}x1 + ${c.b}x2 ${c.sign} ${c.c}`),
+                steps: `<img src="${graphImage}" alt="График решения" style="max-width: 100%; margin-top: 10px;">`,
+                result: `x1 = ${bestPoint.x.toFixed(2)}, x2 = ${bestPoint.y.toFixed(2)}, Z = ${bestValue.toFixed(2)}`
+            });
+        }, 300); // ⏱ подождем 300 мс
     } else {
         document.getElementById('solution-output').innerHTML = "Нет допустимого решения";
     }
-
-    saveSolution({
-        method: "Графический метод",
-        objective: `Z = ${x1}x1 + ${x2}x2`,
-        constraints: constraints.map(c => `${c.a}x1 + ${c.b}x2 ${c.sign} ${c.c}`),
-        steps: [],
-        result: `x1 = ${bestPoint.x.toFixed(2)}, x2 = ${bestPoint.y.toFixed(2)}, Z = ${bestValue.toFixed(2)}`
-    });
-
 }
+
 
 function drawGraph(constraints, bestPoint) {
     const ctx = document.getElementById('graphCanvas').getContext('2d');
@@ -234,6 +240,7 @@ function convertToDualProblem(objCoefficients, constraints, maximize) {
 function simplexMethod(c, constraints, maximize, outputDiv) {
     let m = constraints.length;
     let n = c.length;
+    let stepsHTML = "";
     let table = [];
 
     for (let i = 0; i < m; i++) {
@@ -253,7 +260,10 @@ function simplexMethod(c, constraints, maximize, outputDiv) {
 
     while (true) {
         iterationResults.push(cloneTable(table));
-        outputDiv.innerHTML += displaySimplexTable(table, `Итерация ${iterations + 1}`);
+
+        const htmlTable = displaySimplexTable(table, `Итерация ${iterations + 1}`);
+        outputDiv.innerHTML += htmlTable;
+        stepsHTML += htmlTable; // ✨ копим HTML
 
         let pivotCol = table[m].slice(0, n + m).indexOf(Math.min(...table[m].slice(0, n + m)));
         if (table[m][pivotCol] >= 0) break;
@@ -290,7 +300,12 @@ function simplexMethod(c, constraints, maximize, outputDiv) {
         }
     }
 
-    return { solution, optimalValue: table[m][n + m], iterationResults };
+    return {
+        solution,
+        optimalValue: table[m][n + m],
+        stepsHTML, // 💾 возвращаем шаги в виде HTML
+        iterationResults
+    };
 }
 
 // Функция для клонирования таблицы
@@ -342,12 +357,14 @@ function displaySimplexFinalSolution(result, outputDiv) {
         return tableText;
     });
 
+    const fullSteps = stepsHTML + resultHTML;
+
     saveSolution({
         method: "Симплекс-метод",
         objective: objective,
         constraints: constraintsText,
         result: resultText,
-        steps: steps
+        steps: fullsteps
     });
 }
 
@@ -738,6 +755,24 @@ function displayTable(allocation, costMatrix, stepTitle) {
                 });
             });
 
+
+function deleteSelectedSolutions() {
+    const checkboxes = document.querySelectorAll(".solution-checkbox:checked");
+    if (checkboxes.length === 0) {
+        alert("Выберите хотя бы одно решение для удаления.");
+        return;
+    }
+
+    let indicesToDelete = Array.from(checkboxes).map(cb => parseInt(cb.dataset.index));
+
+    // Удаляем по индексам
+    let solutions = JSON.parse(localStorage.getItem("solutions")) || [];
+    solutions = solutions.filter((_, i) => !indicesToDelete.includes(i));
+    localStorage.setItem("solutions", JSON.stringify(solutions));
+
+    showSolutions();
+}
+
     </script>
 </head>
 <body class="container mt-4">
@@ -756,10 +791,17 @@ function displayTable(allocation, costMatrix, stepTitle) {
     <div id="solutions-panel" class="modal-overlay" style="display: none;">
       <div class="modal-content">
         <span class="close-button" onclick="document.getElementById('solutions-panel').style.display='none'">&times;</span>
-          <h3>Сохранённые решения:</h3>
+        <h3>Сохранённые решения:</h3>
+
+        <div id="solution-actions" style="margin-bottom: 10px;">
+          <button id="delete-selected" onclick="deleteSelectedSolutions()">🗑 Удалить выбранные</button>
+        </div>
+
         <ul id="solutions-list"></ul>
       </div>
     </div>
+
+
 
     <div id="full-solution-panel" class="modal-overlay" style="display: none;">
       <div class="modal-content">
@@ -905,6 +947,10 @@ function displayTable(allocation, costMatrix, stepTitle) {
 <!-- Стиль -->
 <style>
 
+    body {
+        zoom: 90%
+    }
+
     .content-section {
         padding: 20px;
         background-color: #f9f9f9;
@@ -929,7 +975,7 @@ function displayTable(allocation, costMatrix, stepTitle) {
 
     .form-control {
         width: 100%;
-        min-width: 20px;
+        min-width: 10px;
         padding: 5px;
         font-size: 11px;
         margin-top: 5px;
@@ -1115,7 +1161,7 @@ function displayTable(allocation, costMatrix, stepTitle) {
 
     #theme-toggle:hover,
     #pred:hover {
-        background-color: rgba(255, 255, 255, 0.1); /* немного подсветки при наведении */
+        background-color: rgba(255, 255, 255, 0.1);
     }
 
     #settings-toggle {
@@ -1142,6 +1188,14 @@ function displayTable(allocation, costMatrix, stepTitle) {
         background-color: #ffffff;
         border: 2px solid #ffffff;
         box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+
+    #delete-selected {
+        color: #000000;
+        font-size: 15px;
+        background: none;
+        border: none;
+        border-radius: 8px;
     }
 
     #saved {
@@ -1180,10 +1234,21 @@ function displayTable(allocation, costMatrix, stepTitle) {
         padding: 20px;
         border-radius: 10px;
         width: 90%;
-        max-width: 600px;
-        max-height: 80%;
+        max-width: 1000px;
+        max-height: 100%;
         overflow-y: auto;
         position: relative;
+    }
+
+    .dark-mode .modal-content {
+        border: 1px solid #ffffff;
+        background-color: #131313;
+        color: #ffffff;
+    }
+
+    .dark-mode #delete-selected {
+        background-color: #131313;
+        color: #ffffff;
     }
 
     .close-button {
@@ -1214,17 +1279,32 @@ function displayTable(allocation, costMatrix, stepTitle) {
 
   // 📋 Отображение списка решений
   function showSolutions() {
-      const list = document.getElementById("solutions-list");
-      list.innerHTML = "";
-      const solutions = JSON.parse(localStorage.getItem("solutions")) || [];
-      solutions.forEach((s, i) => {
-            const li = document.createElement("li");
-            li.innerHTML = `<div><strong>${s.method}</strong>: ${s.objective} → ${s.result}</div><hr class="solution-separator">`;
-            li.style.cursor = "pointer";
-            li.addEventListener("click", () => showFullSolution(i));
-            list.appendChild(li);
+    const list = document.getElementById("solutions-list");
+    list.innerHTML = "";
+    const solutions = JSON.parse(localStorage.getItem("solutions")) || [];
+
+    solutions.forEach((s, i) => {
+        const li = document.createElement("li");
+
+        li.innerHTML = `
+            <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                <input type="checkbox" class="solution-checkbox" data-index="${i}">
+                <div><strong>${s.method}</strong>: ${s.objective} → ${s.result}</div>
+            </label>
+            <hr class="solution-separator">
+        `;
+
+        li.addEventListener("click", (e) => {
+            // игнорировать клик по чекбоксу
+            if (e.target.tagName.toLowerCase() !== "input") {
+                showFullSolution(i);
+            }
         });
-  }
+
+        list.appendChild(li);
+    });
+}
+
 
       // 🔍 Отображение полного решения
       function showFullSolution(index) {
@@ -1263,6 +1343,8 @@ function displayTable(allocation, costMatrix, stepTitle) {
             });
         }
     });
+
+
 
 </script>
 </body>
