--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MainMenu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script>
         function showSection(sectionId) {
             document.querySelectorAll('.content-section').forEach(section => {
@@ -776,6 +777,47 @@ function deleteAllSolutions() {
         showSolutions();
 }
 
+function exportSolutionToPDF(index) {
+    const panel = document.getElementById("full-solution-panel");
+    if (!panel) return;
+
+    const content = document.getElementById("full-solution-content");
+
+    if (!content) return;
+
+    // Клонируем содержимое для аккуратной работы
+    const clone = content.cloneNode(true);
+
+    // Создаем новый контейнер для PDF
+    const wrapper = document.createElement("div");
+    wrapper.style.padding = "20px";
+    wrapper.style.color = "#000";
+    wrapper.style.fontFamily = "Arial, sans-serif"; // более аккуратный шрифт
+    wrapper.style.lineHeight = "1.5"; // Увеличенный межстрочный интервал
+
+    // Добавляем заголовок
+    const title = document.createElement("h2");
+    title.textContent = "Полное решение";
+    title.style.textAlign = "center";
+    title.style.marginBottom = "15px";
+    wrapper.appendChild(title);
+
+    // Перебираем все дочерние элементы клона и добавляем отступы
+    Array.from(clone.children).forEach(child => {
+        child.style.marginBottom = "20px"; // отступ между элементами
+        wrapper.appendChild(child);
+    });
+
+    const opt = {
+        margin:       0.5,
+        filename:     `solution_${index + 1}.pdf`,
+        image:        { type: 'jpeg', quality: 0.98 },
+        html2canvas:  { scale: 2, backgroundColor: "#ffffff" }, // белый фон принудительно
+        jsPDF:        { unit: 'in', format: 'a4', orientation: 'portrait' }
+    };
+
+    html2pdf().from(wrapper).set(opt).save();
+}
 
     </script>
 </head>
@@ -783,8 +825,6 @@ function deleteAllSolutions() {
     <h1 class="text-center">Решение задач линейного программирования</h1>
 
     <button id="settings-toggle">⚙️</button>
-
-
 
     <div id="settings-panel" style="display: none;">
         <button id="theme-toggle">🌙</button>
@@ -817,7 +857,6 @@ function deleteAllSolutions() {
           <tbody id="solutions-list"></tbody>
         </table>
 
-
       </div>
     </div>
 
@@ -827,6 +866,7 @@ function deleteAllSolutions() {
       <div class="modal-content">
         <span class="close-button" onclick="document.getElementById('full-solution-panel').style.display='none'">&times;</span>
         <h3>Полное решение:</h3>
+        <div id="full-solution-header"></div>
         <div id="full-solution-content"></div>
       </div>
     </div>
@@ -1167,6 +1207,21 @@ function deleteAllSolutions() {
         opacity: 1;
     }
 
+    #export-button {
+        width: 100%;
+        height: 3em;
+        background-color: #000;
+        color: #fff;
+        font-size: 1.2em;
+        font-weight: bold;
+        border: 2px solid white;
+        border-radius: 8px;
+        cursor: pointer;
+        word-break: break-all;
+        text-align: center;
+        margin: 2px;
+    }
+
     #theme-toggle,
     #pred {
         cursor: pointer;
@@ -1327,6 +1382,7 @@ function showSolutions() {
             <td>${s.date || "-"}</td>
             <td><input type="checkbox" class="solution-checkbox" data-index="${i}"></td>
         `;
+
         row.style.cursor = "pointer";
         row.addEventListener("click", (e) => {
             if (!e.target.matches("input")) {
@@ -1361,6 +1417,11 @@ function showSolutions() {
     `;
 
     document.getElementById("full-solution-panel").style.display = "flex";
+    document.getElementById("full-solution-header").innerHTML = `
+    <button id="export-button" onclick="exportSolutionToPDF(${index})">
+        📄 Скачать в PDF
+    </button>
+`;
 }
 
 function sortSolutionsBy(key) {
